2007-01-22  Soeren Sonnenburg <Soeren.Sonnenburg@first.fraunhofer.de>

	* guilib/GUIMatlab.cpp: + matlab build fix
	* Makefile, base/SGObject.cpp, base/SGObject.h, base/SGObject.i,
	  base/Version.cpp, base/Version.h, classifier/Classifier.i,
	  classifier/KRR.cpp, classifier/KRR.h, classifier/KRR.i,
	  classifier/KernelPerceptron.i, classifier/svm/SVM.cpp,
	  classifier/svm/SVM.h, classifier/svm/SVM_light.cpp, configure,
	  distance/Canberra.i, distance/Chebyshew.i, distance/Distance.cpp,
	  distance/Distance.i, distance/DistanceMachine.i,
	  distance/Geodesic.i, distance/Jensen.i, distance/Manhattan.i,
	  distance/Minkowski.i, distance/RealDistance.i,
	  distance/SimpleDistance.i, distance/StringDistance.i,
	  distributions/Distribution.i,
	  distributions/histogram/Histogram.i, distributions/hmm/GHMM.cpp,
	  distributions/hmm/GHMM.h, distributions/hmm/GHMM.i,
	  distributions/hmm/HMM.cpp, distributions/hmm/HMM.h,
	  distributions/hmm/HMM.i, distributions/hmm/LinearHMM.h,
	  distributions/hmm/LinearHMM.i, features/Features.i,
	  features/SparseFeatures.h, gui/GUI.cpp, gui/Python.cpp,
	  gui/R.cpp, gui/TextGUI.cpp, guilib/GUIHMM.cpp, guilib/GUIHMM.h,
	  guilib/GUIMatlab.cpp, guilib/GUIOctave.cpp, guilib/GUIR.cpp,
	  kernel/CombinedKernel.cpp, kernel/CommUlongStringKernel.cpp,
	  kernel/CommWordKernel.cpp, kernel/CommWordStringKernel.cpp,
	  kernel/Kernel.cpp, kernel/Kernel.i, kernel/KernelMachine.h,
	  kernel/KernelMachine.i, kernel/MindyGramKernel.cpp,
	  kernel/WeightedDegreeCharKernel.cpp,
	  kernel/WeightedDegreeCharKernel.i,
	  kernel/WeightedDegreePositionCharKernel.cpp, lib/Library.i,
	  preproc/LogPlusOne.i, preproc/NormDerivativeLem3.i,
	  preproc/NormOne.i, preproc/PCACut.cpp, preproc/PCACut.i,
	  preproc/PreProc.i, preproc/PruneVarSubMean.i,
	  preproc/RealPreProc.i, preproc/ShortPreProc.i,
	  preproc/SimplePreProc.i, preproc/SortWord.i,
	  preproc/SortWordString.i, preproc/SparsePreProc.i,
	  preproc/StringPreProc.i, preproc/WordPreProc.i,